--- a/migration/alembic.ini
+++ b/migration/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://root:@localhost/banking_apps
+sqlalchemy.url = driver://root:@localhost:3306/banking_apps
 
 
 [post_write_hooks]
